[package]
name = "juniper_actix_web"
version = "0.1.0"
authors = ["Eric Mark Martin <ericmarkmartin@gmail.com>"]
edition = "2018"

[features]
async = [ "juniper/async" ]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
juniper = { version = "0.14.1" , default-features = false, path = "../juniper"}

actix-web = "2.0.0"
actix-http = "1.0.1"

futures = { version = "=0.3.1", features = ["compat"] }

[dev-dependencies]
actix-rt = "1.0.0"
pretty_env_logger = "0.2"
awc = "1.0.1"
url = "2.1.0"

[dev-dependencies.juniper]
version = "0.14.1"
features = ["expose-test-schema", "serde_json"]
path = "../juniper"
